--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -1,23 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net472;net48</TargetFrameworks>
     <TargetFrameworks>$(TargetFrameworks);net6.0;net8.0;net9.0</TargetFrameworks>
+    <RoslynVersion>4.4</RoslynVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="MSTest.TestFramework" />
-
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\Verify.MSTest.SourceGenerator\Verify.MSTest.SourceGenerator.csproj" ReferenceOutputAssembly="false" PackAsAnalyzer="true" OutputItemType="Analyzer" />
-
+  </ItemGroup>
+  <ItemGroup Condition="$(Configuration) == 'Release'">
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="buildTransitive\" />
     <None Include="buildTransitive\Verify.MSTest.props" Pack="true" PackagePath="build\" />
+    <None Include="..\Verify.MSTest.SourceGenerator\bin\Release\netstandard2.0\Verify.MSTest.SourceGenerator.dll"
+          Pack="true"
+          PackagePath="analyzers\dotnet\roslyn$(RoslynVersion)\cs\" />
   </ItemGroup>
-
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
     <Reference Include="System.IO.Compression" />
   </ItemGroup>
-
 </Project>
