--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ src/Verify/EmptyFiles/* binary
 
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 *.verified.xml text eol=lf working-tree-encoding=UTF-8
+*.verified.md text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
 *.verified.props text eol=lf working-tree-encoding=UTF-8
 *.verified.nuspec text eol=lf working-tree-encoding=UTF-8
