tests(bin): add binary handling to verifychecks tests

--- a/src/Verify.Tests/InnerVerifyChecksTests/Valid/.gitattributes
+++ b/src/Verify.Tests/InnerVerifyChecksTests/Valid/.gitattributes
@@ -8,4 +8,5 @@
 
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 *.verified.html text eol=lf working-tree-encoding=UTF-8
+*.verified.bin binary
 
