--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -35,10 +35,10 @@ build_script:
 - dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.MSTest.SourceGenerator.Tests --configuration Release --no-build --no-restore --verbosity minimal
-- dotnet test src/Verify.MSTest.DisableAttachments.Tests.csproj --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet test src/Verify.MSTest.DisableAttachments.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.NUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.NUnit.Tests --configuration Release --no-build --no-restore --verbosity minimal
-- dotnet test src/Verify.NUnit.DisableAttachments.Tests.csproj --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet test src/Verify.NUnit.DisableAttachments.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore --verbosity minimal
@@ -47,7 +47,7 @@ build_script:
 - dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity minimal
-- dotnet test src/Verify.TUnit.DisableAttachments.Tests.csproj --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet test src/Verify.TUnit.DisableAttachments.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet build src/VerifyDangling.sln --configuration Release --verbosity minimal
 #- dotnet test src/DanglingSnapshotsMSTestUsage --configuration Release --no-build --no-restore
 #- dotnet test src/DanglingSnapshotsNUnitUsage --configuration Release --no-build --no-restore
