--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -23,7 +23,7 @@
     <PackageVersion Include="MSTest" Version="3.9.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.9.2" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.0.0" />
-    <PackageVersion Include="Polyfill" Version="8.0.1" />
+    <PackageVersion Include="Polyfill" Version="9.0.0-beta.2" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.156" />
     <PackageVersion Include="PublicApiGenerator" Version="11.4.6" />
     <PackageVersion Include="SimpleInfoName" Version="3.1.2" />
