--- a/src/Verify/buildTransitive/Verify.props
+++ b/src/Verify/buildTransitive/Verify.props
@@ -52,4 +52,18 @@
   <ItemGroup Condition="$(Language) == 'C#' and ($(ImplicitUsings) == 'enable' or $(ImplicitUsings) == 'true')">
     <Using Include="VerifyTests" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="**\*.received.*;**\*.verified.*" Condition="$(Language) == 'C#'">
+      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0].Split('(')[0])</ParentFile>
+      <DependentUpon>%(ParentFile).cs</DependentUpon>
+    </None>
+    <None Include="**\*.received.*;**\*.verified.*" Condition="$(Language) == 'VB'">
+      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0].Split('(')[0])</ParentFile>
+      <DependentUpon>%(ParentFile).vb</DependentUpon>
+    </None>
+    <None Include="**\*.received.*;**\*.verified.*" Condition="$(Language) == 'F#'">
+      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
+      <DependentUpon>%(ParentFile).fs</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
