move inclusion of **received** and **verified** files to Verify.AfterMicrosoftNetSdk.props, which is imported after MicrosoftNetSdk default globbing item groups.

--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -15,6 +15,8 @@
 
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\" />
+    <None Include="buildTransitive\Verify.AfterMicrosoftNetSdk.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.AfterMicrosoftNetSdk.props" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
