--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,8 @@ src/Verify/EmptyFiles/* binary
 *.verified.props text eol=lf working-tree-encoding=UTF-8
 *.verified.nuspec text eol=lf working-tree-encoding=UTF-8
 *.verified.reentrant text eol=lf working-tree-encoding=UTF-8
+*.verified.ComparerDifferentTargets1 text eol=lf working-tree-encoding=UTF-8
+*.verified.ComparerDifferentTargets2 text eol=lf working-tree-encoding=UTF-8
 *.verified.bin binary
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
