--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -22,9 +22,6 @@ resharper_replace_with_single_call_to_single_or_default_highlighting = error
 # Replace with single call to LastOrDefault(..)
 resharper_replace_with_single_call_to_last_or_default_highlighting = error
 
-# Element is localizable
-resharper_localizable_element_highlighting = none
-
 # Replace with single call to Last(..)
 resharper_replace_with_single_call_to_last_highlighting = error
 
@@ -367,7 +364,7 @@ ij_xml_space_inside_empty_tag = true
 indent_size = 2
 
 # Verify settings
-[*.{received,verified}.{txt,xml,json,md,sql,csv,html,htm,md,nuspec,rels}]
+[*.{received,verified}.{txt,xml,json,md,sql,csv,html,htm,md}]
 charset = utf-8-bom
 end_of_line = lf
 indent_size = unset
